--- a/XAUATthesis.tex
+++ b/XAUATthesis.tex
@@ -1,4 +1,4 @@
-\documentclass[degree=doctor,degreetype=academic,secret=none,bibtype=numeric,electronic]{XAUATthesis}
+\documentclass[degree=doctor,degreetype=academic,secret=none,bibtype=numeric]{XAUATthesis}
 % 选项：
 % degree=[master|doctor],               % 必选，硕士|博士
 % degreetype=[academic|engineering]    % 必选，学术学位|专业学位
